<resources>
    <string name="app_name">Spanish Pocket</string>
    <string name="lbl_greeting">¡Hola!</string>
    <string name="lbl_welcome">te damos la bienvenida</string>
    <string name="ph_txt_email">Correo Electronico</string>
    <string name="ph_txt_password">Contraseña</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="btn_newaccount">Crear una cuenta</string>
    <string name="btn_recoverypass">¿Recupera tu contraseña?</string>
    <string name="msg_loginerror">Error</string>
    <string name="msg_cancel">Cancelar</string>
    <string name="lbl_registertitle">Crear Cuenta</string>
    <string name="btn_create_account">Crear Cuenta</string>
    <string name="retype_password">Repetir Contraseña</string>
    <string name="title_score">Get to 5 or more to change their color!</string>
    <string name="btn_present">Presente</string>
    <string name="btn_simple_past">Pasado simple</string>
    <string name="btn_imp_past">Pasado imp.</string>
    <string name="btn_future">Futuro</string>
    <string name="title_how_is_present1">¿Como funciona el</string>
    <string name="title_how_is_present2">PRESENTE</string>
    <string name="btn_pronouns1">Yo</string>
    <string name="btn_pronouns2">tú</string>
    <string name="btn_pronouns3">éL\nELLA\nUSTED</string>
    <string name="btn_pronouns4">Nosotros</string>
    <string name="btn_pronouns5">ELLOS\nELLAS\nUSTEDES</string>
    <string name="title_how_is_simple_past1">¿Como funciona el</string>
    <string name="title_how_is_simple_past2">PASADO SIMPLE</string>
    <string name="title_how_is_imp_past1">¿Como funciona el</string>
    <string name="title_how_is_imp_past2">PASADO</string>
    <string name="title_how_is_imp_past3">IMPERFECTO</string>
    <string name="title_how_is_future1">¿Como funciona el</string>
    <string name="title_how_is_future2">FUTURO</string>
    <string name="title_simple_past">Pasado Simple</string>
    <string name="title_imp_past">Pasado Imperfecto</string>
    <string name="title_future">Futuro</string>
    <string name="title_present">Presente</string>
    <string name="pronouns_present">HOLD THIS TO GET THE\nENDINGS OF THIS TENSE</string>
    <string name="info_later">CONTINUE HERE LATER</string>
    <string name="interrogant">?</string>
    <string name="info_get_to_more">GET TO 5 OR MORE!</string>
    <string name="info_randomizer">RANDOMIZER</string>
    <string name="lbl_question_recover">¿Olvidaste tu contraseña?</string>
    <string name="lbl_info_recover_pass">Escribe tu e-mail, te enviaremos un link para restaurar tu contraseña</string>
    <string name="btn_recover_pass">Recuperar contraseña</string>
</resources>
