<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryWhiteColor"
        tools:context=".Views.LogInActivity">

    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/logo"
            android:id="@+id/img_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp" tools:ignore="VectorDrawableCompat"/>


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/img_logo"

            android:id="@+id/linearLayoutB">
        <EditText
                android:layout_width="350dp"
                android:layout_height="35dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/txt_email"
                android:hint="@string/ph_txt_email"
                android:textColor="@color/colorGreen"
                android:textColorHint="@color/hintTextColor"
                android:textCursorDrawable="@drawable/color_cursor_drawable"
                android:background="@null"
                android:fontFamily="@font/helvetica"
                android:layout_marginLeft="20dp"/>
        <View
                android:layout_width="330dp"
                android:layout_height="1dp"
                android:background="@color/colorGreen"
                android:layout_marginLeft="15dp"/>

        <EditText
                android:layout_width="350dp"
                android:layout_height="35dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/txt_password"
                android:hint="@string/ph_txt_password"
                android:textColor="@color/colorGreen"
                android:textColorHint="@color/hintTextColor"
                android:textCursorDrawable="@drawable/color_cursor_drawable"
                android:background="@null"
                android:fontFamily="@font/helvetica"
                android:layout_marginLeft="20dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/linearLayoutB"
    >
        <Button
                android:text="@string/btn_login"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:id="@+id/btn_login"
                android:visibility="gone"
                android:background="@drawable/btn_corner_green_ligth"
                android:textColor="@color/primaryWhiteColor"
                android:textAllCaps="false"
                android:fontFamily="@font/helvetica"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"/>
        <Button
                android:text="@string/btn_newaccount"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:id="@+id/btn_newaccount"
                android:background="@drawable/btn_corner_white"
                android:textColor="@color/colorGreen"
                android:textAllCaps="false"
                android:fontFamily="@font/helvetica"
                android:layout_marginBottom="10dp" android:textStyle="bold"/>
        <Button
                android:text="@string/btn_recoverypass"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:id="@+id/btn_recoverypass"
                android:background="@drawable/btn_corner_white"
                android:textColor="@color/colorGreen"
                android:textAllCaps="false"
                android:fontFamily="@font/helvetica"
                android:layout_marginBottom="10dp" android:textStyle="bold"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>