<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".Views.RecoverPasswordActivity">
    <!--Button close register-->
    <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:onClick="backLogin"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_close"
            tools:ignore="VectorDrawableCompat" />

    <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_logo_transpte"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <!--  Title Recover Pass  -->
    <LinearLayout
            android:id="@+id/linearLayout13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/old_standard_tt"
                android:gravity="center"
                android:text="@string/lbl_question_recover"
                android:textColor="@color/colorGreen"
                android:textSize="17sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/old_standard_tt"
                android:text="@string/lbl_info_recover_pass"
                android:textAlignment="center"
                android:textColor="@color/colorGreen" />
    </LinearLayout>

    <!--  EditText Email  -->
    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout13">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextRegister">

            <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:fontFamily="@font/old_standard_tt"
                    android:hint="@string/ph_txt_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorGreen"
                    android:textColorHint="@color/colorGreen"
                    android:textCursorDrawable="@color/colorGreen"
                    android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGreen" />
    </LinearLayout>

    <!--Button recover pass-->
    <Button
            android:id="@+id/btn_recover_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@drawable/btn_green_ligth"
            android:fontFamily="@font/old_standard_tt"
            android:text="@string/btn_recover_pass"
            android:textAllCaps="false"
            android:textColor="@color/colorBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>