<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Views.ScoreActivity">

    <TextView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="63dp"
            android:src="@color/colorAccent"
            android:text="VERBOS"
            android:textColor="@color/colorGreen"
            android:textSize="60sp"
            android:textStyle="bold"
            app:fontFamily="@font/old_standard_tt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    <TextView
            android:text="@string/title_score"
            android:layout_width="322dp"
            android:layout_height="47dp"
            android:id="@+id/textView" android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/btn_corner_green_ligth" android:textColor="@color/primaryWhiteColor"
            android:textSize="17sp" android:gravity="center"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

            <Button
                    android:id="@+id/btn_present"
                    android:layout_width="270dp"
                    android:layout_height="57dp"
                    android:background="@drawable/btn_score"
                    android:text="@string/btn_present"
                    android:textColor="@color/primaryWhiteColor"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    app:fontFamily="@font/old_standard_tt" />
            <TextView
                    android:id="@+id/img_present"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:background="@drawable/circle_red"
                    android:gravity="center"
                    android:text="1"
                    android:layout_marginLeft="12dp"
                    android:textColor="@color/primaryWhiteColor"
                    android:textSize="18sp"
                    app:fontFamily="@font/pavanam"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" android:layout_marginTop="45dp">

            <Button
                    android:id="@+id/btn_simple_past"
                    android:layout_width="270dp"
                    android:layout_height="57dp"
                    android:background="@drawable/btn_score"
                    android:text="@string/btn_simple_past"
                    android:textColor="@color/primaryWhiteColor"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    app:fontFamily="@font/old_standard_tt" />
            <TextView
                    android:id="@+id/img_simple_past"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:background="@drawable/circle_red"
                    android:gravity="center"
                    android:text="1"
                    android:layout_marginLeft="12dp"
                    android:textColor="@color/primaryWhiteColor"
                    android:textSize="18sp"
                    app:fontFamily="@font/pavanam"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" android:layout_marginTop="45dp">

            <Button
                    android:id="@+id/btn_pas_imp"
                    android:layout_width="270dp"
                    android:layout_height="57dp"
                    android:background="@drawable/btn_score"
                    android:text="@string/btn_imp_past"
                    android:textColor="@color/primaryWhiteColor"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    app:fontFamily="@font/old_standard_tt" />
            <TextView
                    android:id="@+id/img_pas_imp"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:background="@drawable/circle_red"
                    android:gravity="center"
                    android:text="1"
                    android:layout_marginLeft="12dp"
                    android:textColor="@color/primaryWhiteColor"
                    android:textSize="18sp"
                    app:fontFamily="@font/pavanam"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" android:layout_marginTop="45dp">

            <Button
                    android:id="@+id/btn_future"
                    android:layout_width="270dp"
                    android:layout_height="57dp"
                    android:background="@drawable/btn_score"
                    android:text="@string/btn_future"
                    android:textColor="@color/primaryWhiteColor"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    app:fontFamily="@font/old_standard_tt" />
            <TextView
                    android:id="@+id/img_future"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:background="@drawable/circle_red"
                    android:gravity="center"
                    android:text="1"
                    android:layout_marginLeft="12dp"
                    android:textColor="@color/primaryWhiteColor"
                    android:textSize="18sp"
                    app:fontFamily="@font/pavanam"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>